--- a/drivers/mfd/Makefile
+++ b/drivers/mfd/Makefile
@@ -198,4 +198,4 @@ obj-$(CONFIG_MFD_MT6397)	+= mt6397-core.o
 obj-$(CONFIG_FUSB_30X)		+= fusb302.o
 obj-$(CONFIG_MFD_RK1000)	+= rk1000-core.o
 
-obj-$(CONFIG_PI5USB31213A)	+= pi5usb31213a.o
+#obj-$(CONFIG_PI5USB31213A)	+= pi5usb31213a.o
